# winterChallenge2026

./: .gitignore  CMakeLists.txt  Makefile  bot  concat.pl
src/: Game.hpp  main.cpp
tests/: Game_scenario_26x14_test.cpp  Game_scenario_30x16_test.cpp  Game_scenario_36x20_test.cpp  Game_scenario_5x5_test.cpp  Game_test.cpp  run_test.sh  test_losing_input.txt
